[package]
name = "gluon_language-server"
version = "0.18.1-alpha.0"
authors = ["Markus Westerlind <marwes91@gmail.com>"]
description = "Language server providing completion for gluon"
license = "MIT"
repository = "https://github.com/gluon-lang/gluon_language-server"
edition = "2018"

[workspace]

[dependencies]
clap = "2.19.0"

log = "0.4.20"
env_logger = "0.9.0"

anyhow = "1"

codespan-lsp = "0.11.1"
codespan-reporting = "0.11.1"

url = "2"

combine = "4"

async-trait = "0.1"
async-pipe = "0.1"
jsonrpc-core = "18.0.0"
futures = { version = "0.3", features = ["compat"] }
tokio = { version = "1.13.1", features = ["full"] }
tokio-util = { version = "0.6.8", features = ["codec"] }
bytes = "1.1.0"

serde = "1.0.0"
serde_json = "1.0.0"
serde_derive = "1.0.0"

lsp-types = "0.88.0"
debugserver-types = "0.5.0"

gluon = { version = "0.18", features = ["serialization", "regex", "rand", "web"], git = "https://github.com/gluon-lang/gluon" }
gluon_completion = {version = "0.18", git = "https://github.com/gluon-lang/gluon"}
gluon_format = {version = "0.18", git = "https://github.com/gluon-lang/gluon" }

[dev-dependencies]
pretty_assertions = "1.0.0"

# [patch.crates-io]
# gluon_base = { path = "../gluon/base" }
# gluon_parser = { path = "../gluon/parser" }
# gluon_check = { path = "../gluon/check" }
# gluon_format = { path = "../gluon/format" }
# gluon_completion = { path = "../gluon/completion" }
# gluon_vm = { path = "../gluon/vm" }
# gluon = { path = "../gluon" }
